tests/baselines/reference/accessorWithInitializer(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
accessorWithInitializer.ts(2,9): error TS1052: A 'set' accessor parameter cannot have an initializer.
accessorWithInitializer.ts(3,16): error TS1052: A 'set' accessor parameter cannot have an initializer.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== accessorWithInitializer.ts (2 errors) ====
    class C {
        set X(v = 0) { }
            ~
!!! error TS1052: A 'set' accessor parameter cannot have an initializer.
        static set X(v2 = 0) { }
                   ~
!!! error TS1052: A 'set' accessor parameter cannot have an initializer.
    }